force-app/main/default/objects/Event_Client_Follow_Up__c/Event_Client_Follow_Up__c.object-meta.xml
<CustomObject>
    <description>Enterprise Toronto&#39;s event follow-up module - used to gather feedback on Enterprise Toronto events.</description>
    <label>Event Client Follow Up</label>
    <nameField>
        <displayFormat>ECNo-{YYYY}-{00000}</displayFormat>
        <label>Event Client Follow Up Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Client Follow Ups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>