force-app/main/default/objects/Event_Client_Follow_Up__c/fields/CampaignID__c.field-meta.xml
<CustomField>
    <fullName>CampaignID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CampaignID</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Event Client Follow Ups</relationshipLabel>
    <relationshipName>Event_Client_Follow_Ups</relationshipName>
    <type>Lookup</type>
</CustomField>