force-app/main/default/objects/Event_Client_Follow_Up__c/fields/ContactID__c.field-meta.xml
<CustomField>
    <fullName>ContactID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>ContactID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Client Follow Ups</relationshipLabel>
    <relationshipName>Event_Client_Follow_Ups</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>