force-app/main/default/objects/Event_Client_Follow_Up__c/fields/Workshop_Attendance_Before__c.field-meta.xml
<CustomField>
    <fullName>Workshop_Attendance_Before__c</fullName>
    <label>Workshop – Attendance Before</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>