force-app/main/default/objects/Event_Client_Follow_Up__c/fields/Workshop_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Workshop_Feedback__c</fullName>
    <label>Workshop - Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>