force-app/main/default/objects/Event_Client_Follow_Up__c/fields/Workshop_Met_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Workshop_Met_Expectations__c</fullName>
    <label>Workshop - Met Expectations</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Strongly Agree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Strongly Disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>