force-app/main/default/objects/Event_Client_Follow_Up__c/fields/Workshop_Value_for_Money__c.field-meta.xml
<CustomField>
    <fullName>Workshop_Value_for_Money__c</fullName>
    <label>Workshop – Value for Money</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A Great Deal of Value</fullName>
            </value>
            <value>
                <fullName>A Lot of Value</fullName>
            </value>
            <value>
                <fullName>A Moderate Level of Value</fullName>
            </value>
            <value>
                <fullName>Little Value</fullName>
            </value>
            <value>
                <fullName>No Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>